tests/paczka1/fuzzy1/25472791.err
Error in line 1: OB4ubYCm2h A442 29,9
Error in line 6: LvU839 A394 9,2
Error in line 7: LvU839 A442 20,9
